2010-12-14 Thunor <thunorsif_at_hotmail.com>
* Added RAM size changing to the runtime options.
* Added RAM size to the rcfile.

2010-12-13 Thunor <thunorsif_at_hotmail.com>
* Added vkeyb autohide, toggle_shift and alpha to the rcfile.
* Added invert screen to the rcfile.

2010-12-12 Thunor <thunorsif_at_hotmail.com>
* Added machine model switching to the runtime options.
* Added machine model to the rcfile.

2010-12-08 Thunor <thunorsif_at_hotmail.com>
* Added support for (in addition to z81's 1K to 16K) 32K, 48K and 56K of
  RAM. load_p now loads up to 48K instead of z81's 16K limit.

2010-12-07 Thunor <thunorsif_at_hotmail.com>
* Added support for a thorough runtime reinitialisation of z81 (sz81
  was tweaked a little). RAM and ROM changes have been tested to work.

2010-12-06 Thunor <thunorsif_at_hotmail.com>
* Added a function to preload the ROMs which will enable the emulator
  to switch between them at runtime without repeatedly loading them.
* Modified vkeyb_init to load both keyboard images on initialisation.

2010-12-05 Thunor <thunorsif_at_hotmail.com>
* Added two runtime options pages and moved the original two.
* Modified the ZX printer filename to include the date and time.

2010-12-04 Chris Young <chris_at_unsatisfactorysoftware.co.uk>
* Updated Amiga sections to reflect recent changes.
* Modified ZX printer so the output file is not opened until something
  is printed.

2010-12-02 Thunor <thunorsif_at_hotmail.com>
* Removed most of the command-line interface leaving only the video
  options. sz81 now manages the CLI which makes parseoptions redundant.
* Added support for a platform dependent local data directory which is
  currently used to locate the permanently operational ZX printer file.
* Completely reorganised main in smain.c. Since configuring sz81 via
  the CLI is now redundant, sz81 is initialised before the emulator so
  that the emulator will now initialise using rcfile data.

2010-11-25 Thunor <thunorsif_at_hotmail.com>