@@ -60,12 +60,13 @@
 #define HS_RUNOPTS0_ZX81 98
 #define HS_RUNOPTS0_RAM_DN 99
 #define HS_RUNOPTS0_RAM_UP 100
-
-/* ... */
-
-#define HS_RUNOPTS0_SAVE 125
-#define HS_RUNOPTS0_EXIT 126
-#define HS_RUNOPTS0_NEXT 127
+#define HS_RUNOPTS0_FRAMESKIP_DN 101
+#define HS_RUNOPTS0_FRAMESKIP_UP 102
+#define HS_RUNOPTS0_SPEED_DN 103
+#define HS_RUNOPTS0_SPEED_UP 104
+#define HS_RUNOPTS0_SAVE 105
+#define HS_RUNOPTS0_EXIT 106
+#define HS_RUNOPTS0_NEXT 107
 
 #define HS_RUNOPTS2_RUNOPTS2 162
 #define HS_RUNOPTS2_VOLUME_DN 163
