@@ -1,2 +1,0 @@
-#!/bin/sh
-sz81 -o $@
