@@ -1,2 +1,2 @@
 #!/bin/sh
-sz81 -a zs $@
+sz81 $@
